submit layout file for 1024x600

--- a/MyKnee/AndroidManifest.xml
+++ b/MyKnee/AndroidManifest.xml
@@ -29,4 +29,9 @@
         </activity>
     </application>
 
+    <supports-screens
+		android:largeScreens="true"
+     	android:normalScreens="true"
+  		android:anyDensity = "true"/>
+    
 </manifest>
